030-software/fluxcd/apps/spacebar/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: spacebar
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: spacebar
