030-software/fluxcd/apps/spacebar/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: spacebar
  annotations:
    dashboard.${domain}/icon: slack
    dashboard.${domain}/name: spacebar
    dashboard.${domain}/url: https://spacebar.${domain}
spec:
  hostnames:
  - spacebar.${domain}
  parentRefs:
  - name: cilium
    namespace: cilium
  rules:
  - backendRefs:
    - name: spacebar
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
